@@ -188,3 +188,4 @@ gmail_problem_title=Dukungan Gmail tampaknya tidak berfungsi.
 gmail_problem_detail=Detail
 gmail_problem_status=Halaman status
 gmail_problem_close=Tutup
+key_is_not_trusted=!Key isen\'t trusted!
