@@ -188,3 +188,4 @@ gmail_problem_title=Gmail 지원에 결함이 생긴것 같습니다.
 gmail_problem_detail=자세히
 gmail_problem_status=상태 페이지
 gmail_problem_close=닫기
+key_is_not_trusted=!Key isen\'t trusted!
