@@ -188,3 +188,4 @@ gmail_problem_title=Gmail atbalsts izskatās salauzts
 gmail_problem_detail=Detaļas
 gmail_problem_status=Statusa lapa
 gmail_problem_close=Aizvērt
+key_is_not_trusted=!Key isen\'t trusted!
