@@ -188,3 +188,4 @@ gmail_problem_title=O suporte do Gmail parece estar avariado.
 gmail_problem_detail=Detalhes
 gmail_problem_status=Página de estado
 gmail_problem_close=Fechar
+key_is_not_trusted=!Key isen\'t trusted!
