@@ -188,3 +188,4 @@ gmail_problem_title=Suporte ao Gmail parece quebrado.
 gmail_problem_detail=Detalhes
 gmail_problem_status=Página de status
 gmail_problem_close=Fechar
+key_is_not_trusted=!Key isen\'t trusted!
