@@ -188,3 +188,4 @@ gmail_problem_title=Gmail支持出现问题
 gmail_problem_detail=详细
 gmail_problem_status=状态页
 gmail_problem_close=关闭
+key_is_not_trusted=!Key isen\'t trusted!
